# Campus-Ball_Server_repo

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/controllers/: api_controller.py  auth_controller.py  availability_controller.py  club_controller.py  event_controller.py  match_controller.py  user_controller.py
app/core/: config.py  database.py  deps.py  security.py  settings.py
app/dto/: baseResponse.py
app/dto/api/response/: clubListResponse.py  collageListResponse.py  departmentListResponse.py  imageUploadResponse.py  nicknameCheckResponse.py  userIdCheckResponse.py
app/dto/auth/request/: loginRequest.py  signupClubLeaderRequest.py
app/dto/auth/response/: loginResponse.py  logoutResponse.py  refreshTokenResponse.py  signupClubLeaderResponse.py
app/dto/availability/request/: createAvailabilityRequest.py
app/dto/availability/response/: createAvailabilityResponse.py
app/dto/club/request/: clubInfoResponse.py
app/models/: __init__.py  academic_events.py  availability.py  club.py  college.py  department.py  enums.py  match.py  request.py  user.py
app/repositories/: auth_repository.py  availability_repository.py  club_repository.py  department_repository.py  event_repository.py  match_repository.py  user_repository.py
app/repository/: collage_repository.py
app/services/: api_service.py  auth_service.py  availability_service.py  club_service.py  college_service.py  department_service.py  event_service.py  match_service.py  user_service.py
(+12 files in other folders)
